--- a/app/pages/wechatAuth/wechatAuth.css
+++ b/app/pages/wechatAuth/wechatAuth.css
@@ -20,7 +20,7 @@
     width:1.36rem;
     height:1.36rem;
     margin:0 auto;
-    background: url(../../images/springGrass_logo.png) no-repeat;
+    background: url(../../images/strawberry_logo.png) no-repeat;
     background-size: contain;
 }
 
