--- a/app/pages/mine/mine.css
+++ b/app/pages/mine/mine.css
@@ -148,7 +148,7 @@
     position: absolute;
     height: 1.2rem;
     width: 1.2rem;
-    top: 1.3rem;
+    top: .5rem;
     left: 50%;
     margin-left: -0.6rem;
     border-radius: 50%;
@@ -163,7 +163,7 @@
     width: 1.2rem;
     height: 1.2rem;
     line-height: 1.2rem;
-    top: 1.3rem;
+    top: .5rem;
     left: 50%;
     margin-left: -0.6rem;
     border-radius: 50%;
