--- a/app/reset/reset.css
+++ b/app/reset/reset.css
@@ -121,15 +121,15 @@ img {
 
 input:-moz-placeholder,
 textarea:-moz-placeholder {
-    color: #dcdcdc;
+    color: #999;
 }
 
 input:-ms-input-placeholder,
 textarea:-ms-input-placeholder {
-    color: #dcdcdc;
+    color: #999;
 }
 
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
-    color: #dcdcdc;
+    color: #999;
 }
