--- a/app/common/common.css
+++ b/app/common/common.css
@@ -16,9 +16,11 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 1.18rem;  
-    background: url(../images/nav_tab_bg.png) no-repeat;
-    background-size: contain;   
+    height: .98rem;  
+/*    background: url(../images/nav_tab_bg.png) no-repeat;
+    background-size: contain;   */
+    background-color: #ddd;
+    border-top:1px solid #c1c1c1;
     z-index: 10;  
 }
 
