--- a/app/pages/adv/detail.css
+++ b/app/pages/adv/detail.css
@@ -16,7 +16,7 @@
     z-index: 90;
     width: 100%;
     height: 220px;
-    background-image: url(../../images/adv_bg_02.jpg);
+/*    background-image: url(../../images/adv_bg_02.jpg);*/
     background-repeat: no-repeat;
     background-size: cover;
     display: none;
@@ -115,10 +115,10 @@
 .packetRecord-wrapper {
     position: relative;
     width: 100%;
+    min-height: 10px;
     max-height: 90px;
     background-color: #eee;
     overflow: hidden;
-    border-top: 1px solid #999;
 }
 
 .packetRecord-wrapper li {
@@ -159,14 +159,6 @@
     color: #f02800;
 }
 
-/*.packetRecord-wrapper li img {
-    width: 20px;
-    height:20px;
-    border-radius: 50%;
-    margin-left:.28rem;
-}*/
-
-
 .packetRecord-wrapper li .personal-header {
     display: inline-block;
     width: 20px;
@@ -190,7 +182,6 @@
 
 .correlation-wrapper {
     background-color: #fff;
-    border-top: 1px solid #999;
 }
 
 .correlation-wrapper h2 {
@@ -198,7 +189,7 @@
     line-height: .9rem;
     font-size: 17px;
     color: #333;
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid #c1c1c1;
     margin: 0 .28rem;
     font-weight: 700;
 }
@@ -209,7 +200,7 @@
 
 .correlation-wrapper li {
     height: 1.85rem;
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid #c1c1c1;
 }
 
 .correlation-wrapper li:last-child {
@@ -221,8 +212,8 @@
 }
 
 .correlation-wrapper li > div:last-child {
-    width: 2.18rem;
-    height: 1.43rem;
+    width: 2.2rem;
+    height: 1.44rem;
 }
 
 .correlation-wrapper li h3 {
@@ -266,7 +257,7 @@
     padding-left: .48rem;
 }
 
-.score-wrapper .score-content .start {
+/*.score-wrapper .score-content .start {
     height: 1.55rem;
     line-height: 1.55rem;
     padding-left: .48rem;
@@ -279,7 +270,7 @@
     background: url(../../images/gray_start_icon.png) no-repeat;
     background-size: 100%;
     margin-right: .38rem;
-}
+}*/
 
 .score-wrapper .score-description {
     font-size: 14px;
