--- a/app/pages/feedback/feedback.css
+++ b/app/pages/feedback/feedback.css
@@ -2,29 +2,32 @@
     position: relative;
     width:100%;
     height:100%;
+    text-align: center;
 }
 
 .feedback-wrapper .feedback-content{
-	padding:1.06rem .48rem 0 .48rem;
+	position: relative;
+	width:6.5rem;
+	left:.5rem;
+	top:1.05rem;
 }
 
 .feedback-wrapper .nav-tab{
 	text-align: left;
 	height:.4rem;
 	margin-bottom: .34rem;
-	padding-left:.48rem;
+    
 }
 
 
 .feedback-wrapper .feedback-area{
 	height:2.88rem;
-	margin:0 .48rem;
 }
 
 .feedback-wrapper .feedback-area textarea{
 	width:100%;
 	height:100%;
-	border-radius: 10px;
+	border-radius: 8px;
 	border:1px solid #434343;
 	color:#999;
 	font-size: 12px;
@@ -35,10 +38,10 @@
 .feedback-wrapper .feedback-btn{
 	height: .88rem;
 	line-height: .88rem;
-	margin:1.06rem .48rem 0 .48rem;
+	margin:1.06rem 0;
 	text-align: center;
 	background-color: #811b10;
-	border-radius: 10px;
+	border-radius: 8px;
 	font-size: 17px;
 	color:#fff;
 }
