--- a/app/pages/login/login.css
+++ b/app/pages/login/login.css
@@ -23,7 +23,7 @@
 
 .login-content li label {
     display: inline-block;
-    height: .56rem;
+    height: 60%;
     width: .8rem;
     margin: .15rem 0;
     border-right: 1px solid #999;
@@ -35,7 +35,7 @@
     width: 5rem;
     padding-left: 15px;
     background-color: #eee;
-    color: #999;
+    color: #333;
     font-size: 14px;
 }
 
@@ -58,7 +58,8 @@
     display: inline-block;
     width: .7rem;
     height: .86rem;
-    background: url(../../images/open_password_icon.png) no-repeat;
+/*    background: url(../../images/close_password_icon.png);*/
+    background-repeat: no-repeat;
     background-size: .44rem .27rem;
     background-position: left center;
 }
@@ -88,16 +89,18 @@
     width: 100%;
     height: 100%;
     font-size: 17px;
-    color: #fff;
     border-radius: 8px;
 }
 
 .login-content li:nth-child(4) a {
+    color: #fff;
     background-color: #811b10;
 }
 
 .login-content li:nth-child(5) a {
+    color: #333;
     background-color: #dddddd;
+
 }
 
 .third-login{
