--- a/app/pages/mine/mine.css
+++ b/app/pages/mine/mine.css
@@ -63,7 +63,7 @@
     font-size: 15px;
     padding-left: 1.1rem;
     color: #333;
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid #c1c1c1;
     background-color: #fff!important;
 }
 
