--- a/app/pages/modifyPassword/forgetPassword.css
+++ b/app/pages/modifyPassword/forgetPassword.css
@@ -1,4 +1,4 @@
-.register-wrapper{
+.forgetPassword-wrapper{
     position: relative;
     width:100%;
     height:100%;
@@ -7,49 +7,50 @@
     background-size: cover;
 }
 
-.register-content{
+.forgetPassword-content{
     position: relative;
     padding:1.49rem .75rem 0 .75rem;
 }
 
-.register-content li{
+.forgetPassword-content li{
     position: relative;
     height:.86rem;
     border:1px solid #333237;
-    border-radius: 10px;
+    border-radius: 8px;
 }
 
-.register-content li:nth-child(1){
+.forgetPassword-content li:nth-child(1){
     overflow: hidden;
     margin-bottom: .3rem;
 }
 
-.register-content li:nth-child(1) label{
+.forgetPassword-content li:nth-child(1) label{
     display: inline-block;
-    height:100%;
+    height:60%;
     width:.8rem;
     border-right: 1px solid #999;
     background: url(../../images/mobile_icon.png) no-repeat;
+    background-repeat: no-repeat;
     background-position: center;
     background-size: .3rem .45rem;
 }
 
-.register-content li:nth-child(1) input{
+.forgetPassword-content li:nth-child(1) input{
     display: inline-block;
     height:100%;
     width:5rem;
     padding-left:15px;
     background-color: #eee;
-    color:#999;
+    color:#333;
     font-size: 14px;
 }
 
-.register-content li:nth-child(2){
+.forgetPassword-content li:nth-child(2){
     border:none;
     margin-bottom: .75rem;
 }
 
-.register-content li:nth-child(2) label{
+.forgetPassword-content li:nth-child(2) label{
     display: inline-block;
     height:.86rem;
     line-height: .86rem;
@@ -57,13 +58,13 @@
     background-color:#b09b7c;
     vertical-align: middle;
     text-align: center;
-    border-bottom-right-radius: 10px;
-    border-top-right-radius: 10px;
+    border-bottom-right-radius: 8px;
+    border-top-right-radius: 8px;
     color:#fff;
     font-size: 14px;
 }
 
-.register-content li:nth-child(2) input{
+.forgetPassword-content li:nth-child(2) input{
     display: inline-block;
     height:.86rem;
     width:60%;
@@ -73,45 +74,46 @@
     font-size: 14px;
     border:1px solid #333237;
     border-right: none;
-    border-radius: 10px;
+    border-radius: 8px;
     border-bottom-right-radius: 0;
     border-top-right-radius: 0;
 }
 
-.register-content li:nth-child(3){
+.forgetPassword-content li:nth-child(3){
     margin-bottom: 1.65rem;
 }
 
-.register-content li:nth-child(3) label{
+.forgetPassword-content li:nth-child(3) label{
     position: absolute;
     right:0;
     top:0;
     display: inline-block;
     width:.7rem;
     height:.86rem;
-    background: url(../../images/open_password_icon.png) no-repeat;
+/*    background: url(../../images/open_password_icon.png) no-repeat;*/
+    background-repeat: no-repeat;
     background-size: .44rem .27rem;
     background-position: left center;
 }
 
-.register-content li:nth-child(3) input{
+.forgetPassword-content li:nth-child(3) input{
     display: inline-block;
     height:100%;
     width:5.8rem;
     color:#999;
     font-size: 14px;
-    border-radius: 10px;
+    border-radius: 8px;
     padding-left:15px;
     background-color: #eee;
 }
 
-.register-content li:nth-child(4){
+.forgetPassword-content li:nth-child(4){
     border:none;
     border:1px solid #811b10;
     overflow: hidden;
 }
 
-.register-content li:nth-child(4) a{
+.forgetPassword-content li:nth-child(4) a{
     height:.86rem;
     line-height: .86rem;
     width:100%;
@@ -119,5 +121,6 @@
     text-align: center;
     font-size: 17px;
     color:#fff;
+    border-radius: 8px;
 }
 
