--- a/app/pages/register/register.css
+++ b/app/pages/register/register.css
@@ -16,7 +16,7 @@
     position: relative;
     height:.86rem;
     border:1px solid #333237;
-    border-radius: 10px;
+    border-radius: 8px;
 }
 
 .register-content li:nth-child(1){
@@ -26,10 +26,11 @@
 
 .register-content li:nth-child(1) label{
     display: inline-block;
-    height:100%;
+    height:60%;
     width:.8rem;
     border-right: 1px solid #999;
     background: url(../../images/mobile_icon.png) no-repeat;
+    background-repeat: no-repeat;
     background-position: center;
     background-size: .3rem .45rem;
 }
@@ -40,7 +41,7 @@
     width:5rem;
     padding-left:15px;
     background-color: #eee;
-    color:#999;
+    color:#333;
     font-size: 14px;
 }
 
@@ -57,8 +58,8 @@
     background-color:#b09b7c;
     vertical-align: middle;
     text-align: center;
-    border-bottom-right-radius: 10px;
-    border-top-right-radius: 10px;
+    border-bottom-right-radius: 8px;
+    border-top-right-radius: 8px;
     color:#fff;
     font-size: 14px;
 }
@@ -73,7 +74,7 @@
     font-size: 14px;
     border:1px solid #333237;
     border-right: none;
-    border-radius: 10px;
+    border-radius: 8px;
     border-bottom-right-radius: 0;
     border-top-right-radius: 0;
 }
@@ -89,7 +90,8 @@
     display: inline-block;
     width:.7rem;
     height:.86rem;
-    background: url(../../images/open_password_icon.png) no-repeat;
+/*    background: url(../../images/open_password_icon.png) no-repeat;*/
+    background-repeat: no-repeat;
     background-size: .44rem .27rem;
     background-position: left center;
 }
@@ -100,7 +102,7 @@
     width:5.8rem;
     color:#999;
     font-size: 14px;
-    border-radius: 10px;
+    border-radius: 8px;
     padding-left:15px;
     background-color: #eee;
 }
