--- a/app/pages/wechatAuth/wechatAuth.css
+++ b/app/pages/wechatAuth/wechatAuth.css
@@ -22,10 +22,12 @@
     margin:0 auto;
     background: url(../../images/strawberry_logo.png) no-repeat;
     background-size: contain;
+    background-position: center center;
 }
 
 .wechatAuth-wrapper .springrass_name{
 	font-size: 17px;
+    font-weight: 700;
 	color:#333;
     line-height: 2.5em;
 }
@@ -63,7 +65,7 @@
     width:100%;
     text-align: center;
     background-color: #811b10;
-    border-radius: 10px;
+    border-radius: 8px;
     font-size: 17px;
     color: #fff;
 }
