--- a/app/pages/login/login.css
+++ b/app/pages/login/login.css
@@ -55,6 +55,7 @@
     position: absolute;
     right: 0;
     top: 0;
+    z-index: 3;
     display: inline-block;
     width: .7rem;
     height: .86rem;
