--- a/app/pages/modifyPassword/forgetPassword.css
+++ b/app/pages/modifyPassword/forgetPassword.css
@@ -83,10 +83,11 @@
     margin-bottom: 1.65rem;
 }
 
-.forgetPassword-content li:nth-child(3) label{
+.forgetPassword-content li:nth-child(3) span{
     position: absolute;
     right:0;
     top:0;
+    z-index: 3;
     display: inline-block;
     width:.7rem;
     height:.86rem;
@@ -121,6 +122,5 @@
     text-align: center;
     font-size: 17px;
     color:#fff;
-    border-radius: 8px;
 }
 
