--- a/app/pages/setting/setting.css
+++ b/app/pages/setting/setting.css
@@ -45,10 +45,10 @@
 .setting-wrapper .setting-btn{
 	height: .88rem;
 	line-height: .88rem;
-	margin:1.26rem .48rem 0 .48rem;
+	margin:2.52rem .48rem 0 .48rem;
 	text-align: center;
-	background-color: #811b10;
-	border-radius: 10px;
+	background-color: #ce1035;
+	border-radius: 8px;
 	font-size: 17px;
 	color:#fff;
 }
