--- a/app/pages/modifyPassword/modifyPassword.css
+++ b/app/pages/modifyPassword/modifyPassword.css
@@ -25,7 +25,7 @@
 	height: .88rem;
 	line-height: .88rem;
 	text-align: center;
-	background-color: #811b10;
+	background-color: #ce1035;
 	border-radius: 8px;
 	font-size: 17px;
 	color:#fff;
