--- a/app/pages/wallet/wallet.css
+++ b/app/pages/wallet/wallet.css
@@ -37,7 +37,6 @@
 
 .wallet-wrapper .wallet-list {
     position: relative;
-    /*    background: #eee;*/
 }
 
 .wallet-wrapper .wallet-list h2 {
@@ -99,6 +98,7 @@
 }
 
 .wallet-list .list-header{
+   height: .98rem;
    line-height: .98rem;
    background-color: #dddddd;
    text-align: center;  
@@ -108,13 +108,13 @@
    display: inline-block;
    font-size: 14px;
    color:#333;
-   height:100%;
+   height:.97rem;
    padding:0 .1rem;
 }
 
 .wallet-list .list-header a.active{
     font-weight: 700;
-    border-bottom: 5px solid #ce1035;
+    border-bottom: .1rem solid #ce1035;
 }
 
 .transfer-scroll li{
