--- a/app/pages/feedback/feedback.css
+++ b/app/pages/feedback/feedback.css
@@ -28,7 +28,7 @@
 	width:100%;
 	height:100%;
 	border-radius: 8px;
-	border:1px solid #333;
+	border:1px solid #c1c1c1;
 	color:#999;
 	font-size: 12px;
 	padding:.2rem;
@@ -40,7 +40,7 @@
 	line-height: .88rem;
 	margin:1.06rem 0;
 	text-align: center;
-	background-color: #811b10;
+	background-color: #ce1035;
 	border-radius: 8px;
 	font-size: 17px;
 	color:#fff;
