--- a/app/pages/adv/detail.css
+++ b/app/pages/adv/detail.css
@@ -403,7 +403,9 @@
     top:1.5rem;
     left:50%;
     margin-left: -.625rem;
+    border-radius: 50%;
     background: url(../../images/user_header_icon.png);
+    background-repeat: no-repeat;
     background-size: contain;
 }
 
