--- a/app/pages/adv/detail.css
+++ b/app/pages/adv/detail.css
@@ -261,21 +261,6 @@
     padding-left: .48rem;
 }
 
-/*.score-wrapper .score-content .start {
-    height: 1.55rem;
-    line-height: 1.55rem;
-    padding-left: .48rem;
-}
-
-.score-wrapper .start span {
-    display: inline-block;
-    width: .66rem;
-    height: .61rem;
-    background: url(../../images/gray_start_icon.png) no-repeat;
-    background-size: 100%;
-    margin-right: .38rem;
-}*/
-
 .score-wrapper .score-description {
     font-size: 14px;
     padding-left: .48rem;
@@ -626,4 +611,16 @@
     height: 5rem;
     line-height: 5rem;
     text-align: center;
+}
+
+.detail-wrapper .back-button{
+   position: fixed;
+   display: none;
+   bottom:1rem;
+   right :.6rem;
+   z-index: 90;
+   width:1rem;
+   height:1rem;
+   background:url(../../images/backhome_icon.png) no-repeat;
+   background-size: contain;
 }
