--- a/app/pages/hot/hot.css
+++ b/app/pages/hot/hot.css
@@ -2,6 +2,7 @@
     position: relative;
     width: 100%;
     height: 100%;
+    background-color: #eee;
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
     -ms-transform-style: preserve-3d;
@@ -11,7 +12,7 @@
 
 .hot-wrapper li {
     position: absolute;
-    top: 2rem;
+    top: 1rem;
     left: .28rem;
     height: 7.72rem;
     width: 6.93rem;
@@ -45,11 +46,11 @@
 
 .hot-wrapper li:nth-child(2) {
     z-index: 2;
-    transform: translateY(20px) scale3d(0.95,0.95,0.95);
+    transform: translateY(25px) scale3d(0.95,0.95,0.95);
 }
 
 .hot-wrapper li:nth-child(3) {
-    transform: translateY(40px) scale3d(0.9,0.9,0.9);
+    transform: translateY(50px) scale3d(0.9,0.9,0.9);
     z-index: 1;
 }
 
@@ -67,14 +68,13 @@
     line-height: 6.82rem;
     height: 6.82rem;
     text-align: center;
-/*    background-image: url(../../images/adv_bg_01.jpg);*/
     background-repeat: repeat;
     background-size: 100% 100%;
 }
 
 .hot-wrapper li > div:nth-child(2) {
-    height: .9rem;
-    line-height: .9rem;
+    height: 1.1rem;
+    line-height: 1.1rem;
     background-color: #f6f6f6;
     box-shadow: 0 10px 15px 0 rgba(146, 162, 178, .5);
 }
