--- a/app/pages/adv/detail.css
+++ b/app/pages/adv/detail.css
@@ -193,7 +193,7 @@
     line-height: .9rem;
     font-size: 17px;
     color: #333;
-    border-bottom: 1px solid #c1c1c1;
+    border-bottom: 1px solid #eee;
     margin: 0 .28rem;
     font-weight: 700;
 }
@@ -204,7 +204,7 @@
 
 .correlation-wrapper li {
     height: 1.85rem;
-    border-bottom: 1px solid #c1c1c1;
+    border-bottom: 1px solid #eee;
 }
 
 .correlation-wrapper li:last-child {
@@ -311,7 +311,7 @@
     margin: .47rem;
     height: .86rem;
     line-height: .86rem;
-    background-color: #811b10;
+    background-color: #ce1035;
     text-align: center;
     font-size: 17px;
     color: #fff;
@@ -457,6 +457,7 @@
     margin-left:-.625rem;
     width: 1.25rem;
     height: 1.25rem;
+    border-radius: 50%;
     background: url(../../images/user_header_icon.png);
     background-size: contain;
 }
