--- a/app/pages/adv/list.css
+++ b/app/pages/adv/list.css
@@ -43,7 +43,7 @@
 }
 
 .adv-list-wrapper p.adv-invest {
-    width: 32.5%;
+    width: 32%;
     background: url(../../images/adv_amt_icon.png) no-repeat;
     background-position: .45rem center;
     background-size: .34rem .34rem;
@@ -51,7 +51,7 @@
 }
 
 .adv-list-wrapper p.adv-packetcount {
-    width: 32.5%;
+    width: 32%;
     background: url(../../images/adv_packet_icon.png) no-repeat;
     background-position: left center;
     background-size: .34rem .34rem;
@@ -59,7 +59,7 @@
 }
 
 .adv-list-wrapper p.adv-score {
-    width: 15%;
+    width: 18%;
     background: url(../../images/adv_score_icon.png) no-repeat;
     background-position: left center;
     background-size: .34rem .34rem; 
@@ -67,9 +67,9 @@
 }
 
 .adv-list-wrapper p.adv-time {
-    width: 20%;
+    width: 18%;
     text-align: right;
-    padding-right:.5rem;
+    padding-right:.45rem;
 }
 
 .adv-list-wrapper p.adv-time span {
@@ -77,8 +77,8 @@
     color: #fff;
     padding: 0 5px;
     border-radius: 8px;
+    vertical-align: top;
 }
-
 
 .adv-list-wrapper ul > li:last-child{
     border-bottom: none!important;
