--- a/app/pages/hot/hot.css
+++ b/app/pages/hot/hot.css
@@ -14,9 +14,9 @@
     position: absolute;
     top: 1rem;
     left: .28rem;
-    height: 7.72rem;
-    width: 6.93rem;
-    transform: translateY(0) scale3d(0.9,0.9,0.9);
+    height: 7.91rem;
+    width: 6.94rem;
+    transform: translateY(0) scale3d(0.9, 0.9, 0.9);
     -webkit-perspective: 500px;
     -moz-perspective: 500px;
     -ms-perspective: 500px;
@@ -24,33 +24,34 @@
     perspective: 500px;
 }
 
-.hot-wrapper li .adv-title{
+.hot-wrapper li .adv-title {
     position: absolute;
-    top:.28rem;
-    left:.22rem;
+    top: .28rem;
+    left: .22rem;
     font-size: 17px;
-    color:#fff;
+    color: #fff;
     font-weight: 700;
-    width:6.6rem;
+    width: 6.6rem;
+    z-index: 3;
 }
 
 .hot-wrapper li:nth-child(1) {
     z-index: 3;
-    transform: translateY(0) scale3d(1,1,1);
+    transform: translateY(0) scale3d(1, 1, 1);
 }
 
 .hot-wrapper li:nth-child(2) {
-    transition:transform 0.2s linear;
-    -webkit-transition:transform 0.2s linear;
+    transition: transform 0.2s linear;
+    -webkit-transition: transform 0.2s linear;
 }
 
 .hot-wrapper li:nth-child(2) {
     z-index: 2;
-    transform: translateY(25px) scale3d(0.95,0.95,0.95);
+    transform: translateY(25px) scale3d(0.95, 0.95, 0.95);
 }
 
 .hot-wrapper li:nth-child(3) {
-    transform: translateY(50px) scale3d(0.9,0.9,0.9);
+    transform: translateY(50px) scale3d(0.9, 0.9, 0.9);
     z-index: 1;
 }
 
@@ -64,12 +65,30 @@
     z-index: 3;
 }
 
+.hot-wrapper li > div {
+    position: relative;
+}
+
 .hot-wrapper li > div:nth-child(1) {
     line-height: 6.82rem;
     height: 6.82rem;
+    width: 100%;
     text-align: center;
-    background-repeat: repeat;
+    background-repeat: no-repeat;
+    background-position: center center;
     background-size: 100% 100%;
+}
+
+.hot-wrapper li > div:nth-child(1):after {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 2;
 }
 
 .hot-wrapper li > div:nth-child(2) {
@@ -90,7 +109,7 @@
     background: url(../../images/adv_amt_icon2.png) no-repeat;
     background-size: .34rem .34rem;
     background-position: .23rem center;
-    padding-left:.6rem;
+    padding-left: .6rem;
 }
 
 .hot-wrapper p.adv-packetcount {
@@ -98,7 +117,7 @@
     background: url(../../images/adv_packet_icon2.png) no-repeat;
     background-size: .34rem .34rem;
     background-position: left center;
-    padding-left:.36rem;
+    padding-left: .36rem;
 }
 
 .hot-wrapper p.adv-score {
@@ -106,12 +125,12 @@
     background: url(../../images/adv_score_icon2.png) no-repeat;
     background-size: .34rem .34rem;
     background-position: left center;
-    padding-left:.36rem;
+    padding-left: .36rem;
 }
 
 .hot-wrapper p.adv-time {
     width: 15%;
-    padding-left:0!important;
+    padding-left: 0!important;
 }
 
 .hot-wrapper p.adv-time span {
@@ -121,13 +140,7 @@
     border-radius: 10px;
 }
 
-.slideOutRight{
+.slideOutRight {
     -webkit-transform: translate3d(100%, 0, 0);
-    transform: translate3d(100%, 0, 0);    
+    transform: translate3d(100%, 0, 0);
 }
-
-
-
-
-
-
