--- a/app/pages/setting/setting.css
+++ b/app/pages/setting/setting.css
@@ -9,7 +9,7 @@
     height: 1.08rem;
     line-height: 1.08rem;
     margin:0 .3rem;
-    border-bottom: 1px solid #c1c1c1;
+    border-bottom: 1px solid #eee;
     padding-left:0.18rem;
 }
 
