--- a/app/pages/mine/mine.css
+++ b/app/pages/mine/mine.css
@@ -18,8 +18,8 @@
 
 .mine-header-wrapper .personal-header {
     background: url(../../images/mine_header_bg.png) no-repeat;
-    background-size: contain;
-    width: 7.5rem;
+    background-size: 100% 100%;
+    width:100%;
     text-align: center;
 }
 
