--- a/app/pages/adv/detail.css
+++ b/app/pages/adv/detail.css
@@ -4,14 +4,14 @@
     height: 100%;
 }
 
-.detail-wrapper .scroll-wrapper{
+.detail-wrapper .scroll-wrapper {
     overflow: hidden;
-    height:6.5rem;
+    height: 6.5rem;
 }
 
-.video-wrapper{
-   position: relative;
-   width:100%;
+.video-wrapper {
+    position: relative;
+    width: 100%;
 }
 
 .video-wrapper .video-cover {
@@ -28,14 +28,14 @@
 
 .video-wrapper .video-cover:before {
     position: absolute;
-    content:'';
+    content: '';
     display: block;
     top: 0;
     left: 0;
     z-index: 91;
     width: 100%;
     height: 220px;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .video-wrapper .video-pause {
@@ -48,12 +48,12 @@
     height: 55.5px;
     margin-left: -25.25px;
     margin-top: -25.25px;
-    background-image: url(../../images/video_pause_icon.png);
+    background-image: url(../../images/video_play_btn.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.video-wrapper .video-player{
+.video-wrapper .video-player {
     position: relative;
     width: 100%;
     height: 220px;
@@ -81,7 +81,7 @@
     background: url(../../images/adv_amt_icon2.png) repeat;
     background-size: contain;
     vertical-align: -5px;
-    margin-right: .1rem;
+    margin-right: 4px;
 }
 
 .video-wrapper .video-detail > div:nth-child(2) {
@@ -96,7 +96,7 @@
     background: url(../../images/adv_packet_icon2.png) repeat;
     background-size: contain;
     vertical-align: -5px;
-    margin-right: .1rem;
+    margin-right: 4px;
 }
 
 .video-wrapper .video-detail > div:nth-child(3) {
@@ -113,13 +113,13 @@
     background: url(../../images/adv_share_icon.png) repeat;
     background-size: contain;
     vertical-align: -5px;
-    margin-right: .1rem;
+    margin-right: 4px;
 }
 
 .packetRecord-wrapper {
     position: relative;
     width: 100%;
-    min-height: 10px;
+    min-height: 1px;
     max-height: 90px;
     background-color: #eee;
     overflow: hidden;
@@ -132,30 +132,30 @@
     text-align: left;
 }
 
-.packetRecord-wrapper li:nth-of-type(1n){
-   color:#9f786f;
+.packetRecord-wrapper li:nth-of-type(1n) {
+    color: #9f786f;
 }
 
-.packetRecord-wrapper li:nth-of-type(2n){
-   color:#cb9b23;
+.packetRecord-wrapper li:nth-of-type(2n) {
+    color: #cb9b23;
 }
 
-.packetRecord-wrapper li:nth-of-type(3n){
-   color:#2db890;
+.packetRecord-wrapper li:nth-of-type(3n) {
+    color: #2db890;
 }
 
 .packetRecord-wrapper li > div:nth-child(2) {
     width: 25%;
-    margin-left:.28rem;
+    margin-left: .28rem;
 }
 
 .packetRecord-wrapper li > div:nth-child(3) {
     width: 25%;
-    margin-left:.35rem;
+    margin-left: .35rem;
 }
 
 .packetRecord-wrapper li > div:nth-child(4) {
-    margin-left:.35rem;
+    margin-left: .35rem;
     color: #333;
 }
 
@@ -166,12 +166,12 @@
 .packetRecord-wrapper li .personal-header {
     display: inline-block;
     width: 20px;
-    height:20px;
+    height: 20px;
     border-radius: 50%;
-    margin-left:.28rem;
-    background-image : url(../../images/user_header_icon.png);
-    background-repeat:  no-repeat;
-    background-size  : contain;
+    margin-left: .28rem;
+    background-image: url(../../images/user_header_icon.png);
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .packetRecord-wrapper ul {
@@ -179,9 +179,9 @@
     top: 0px;
 }
 
-.packetRecord-wrapper ul.move{
+.packetRecord-wrapper ul.move {
     transition: all 0.2s linear;
-    -webkit-transition: all 0.2s linear;   
+    -webkit-transition: all 0.2s linear;
 }
 
 .correlation-wrapper {
@@ -385,8 +385,8 @@
     position: absolute;
     width: 1.25rem;
     height: 1.25rem;
-    top:1.5rem;
-    left:50%;
+    top: 1.5rem;
+    left: 50%;
     margin-left: -.625rem;
     border-radius: 50%;
     background: url(../../images/user_header_icon.png);
@@ -394,38 +394,38 @@
     background-size: contain;
 }
 
-.packet-wrapper .packet-title{
+.packet-wrapper .packet-title {
     position: absolute;
     top: 3rem;
     font-size: 16px;
     color: #ffd8b0;
     text-align: center;
-    width:100%;
+    width: 100%;
 }
 
-.packet-wrapper .packet-desprition{
+.packet-wrapper .packet-desprition {
     position: absolute;
     top: 3.6rem;
     text-align: center;
     font-size: 14px;
     color: #ffd7af;
-    width:100%;
+    width: 100%;
 }
 
-.packet-wrapper .packet-wish{
+.packet-wrapper .packet-wish {
     position: absolute;
     bottom: 3.5rem;
     text-align: center;
     font-size: 20px;
     min-height: .6rem;
     color: #ffd7af;
-    width:100%;
+    width: 100%;
 }
 
-.packet-wrapper .packet-open{
+.packet-wrapper .packet-open {
     position: absolute;
-    left:50%;
-    bottom:1.35rem;
+    left: 50%;
+    bottom: 1.35rem;
     display: block;
     width: 1.48rem;
     height: 1.48rem;
@@ -433,7 +433,7 @@
     background: url(../../images/packet_open_icon.png) no-repeat;
     background-size: contain;
     perspective: 500;
-    -webkit-perspective: 500;    
+    -webkit-perspective: 500;
     transform-style: preserve-3d;
     -webkit-transform-style: preserve-3d;
     backface-visibility: visible;
@@ -449,12 +449,11 @@
     background-size: contain;
 }
 
-
-.packet-wrapper .result-header{
+.packet-wrapper .result-header {
     position: absolute;
-    top:1.54rem;
-    left:50%;
-    margin-left:-.625rem;
+    top: 1.54rem;
+    left: 50%;
+    margin-left: -.625rem;
     width: 1.25rem;
     height: 1.25rem;
     border-radius: 50%;
@@ -462,40 +461,40 @@
     background-size: contain;
 }
 
-.packet-wrapper .packet-result .packet-title{
+.packet-wrapper .packet-result .packet-title {
     position: absolute;
     top: 3rem;
     font-size: 16px;
     color: #fcbf81;
     text-align: center;
-    width:100%;
+    width: 100%;
 }
 
-.packet-wrapper .packet-result .packet-desprition{
+.packet-wrapper .packet-result .packet-desprition {
     position: absolute;
     top: 3.5rem;
     text-align: center;
     font-size: 14px;
     color: #fcbf81;
-    width:100%;
+    width: 100%;
 }
 
 .packet-wrapper .packet-money {
     position: absolute;
-    top:4.6rem;
-    left:0;
+    top: 4.6rem;
+    left: 0;
     text-align: center;
-    width:100%;
+    width: 100%;
     font-size: 43px;
     color: #fcbf81;
 }
 
-.packet-wrapper .packet-account{
+.packet-wrapper .packet-account {
     position: absolute;
-    top:5.7rem;
-    left:0;
+    top: 5.7rem;
+    left: 0;
     text-align: center;
-    width:100%;
+    width: 100%;
     font-size: 12px;
     color: #fff;
 }
@@ -509,9 +508,9 @@
 
 .packet-wrapper .packet-ranking {
     position: absolute;
-    bottom:1.5rem;
-    left:0;
-    width:100%;
+    bottom: 1.5rem;
+    left: 0;
+    width: 100%;
     text-align: center;
     font-size: 14px;
     color: #fcbf81;
@@ -521,52 +520,50 @@
     font-size: 20px;
 }
 
-
 .packet-wrapper .packet-remindTips {
     position: absolute;
-    top:5rem;
-    left:0;
+    top: 5rem;
+    left: 0;
     text-align: center;
-    width:100%;
+    width: 100%;
     font-size: 38px;
     color: #fcbf81;
 }
 
-.packet-wrapper .packet-more{
+.packet-wrapper .packet-more {
     position: absolute;
     bottom: .32rem;
     text-align: center;
     width: 100%;
-    background:url(../../images/more_icon.png) no-repeat;
+    background: url(../../images/more_icon.png) no-repeat;
     background-size: .17rem .28rem;
     background-position: 68% 44%;
 }
 
-.packet-wrapper .packet-more a{
+.packet-wrapper .packet-more a {
     font-size: 14px;
-    color:#ffe0cb;
+    color: #ffe0cb;
 }
-
 
 @-webkit-keyframes rotate {
     from {
-        transform: rotate3d(0,0,0,0);
-        -webkit-transform: rotate3d(0,0,0,0);  
+        transform: rotate3d(0, 0, 0, 0);
+        -webkit-transform: rotate3d(0, 0, 0, 0);
     }
     to {
-        transform: rotate3d(0,1,0,360deg);
-        -webkit-transform:rotate3d(0,1,0,360deg);
+        transform: rotate3d(0, 1, 0, 360deg);
+        -webkit-transform: rotate3d(0, 1, 0, 360deg);
     }
 }
 
 @keyframes rotate {
     from {
-        transform: rotate3d(0,0,0,0);
-        -webkit-transform: rotate3d(0,0,0,0);  
+        transform: rotate3d(0, 0, 0, 0);
+        -webkit-transform: rotate3d(0, 0, 0, 0);
     }
     to {
-        transform: rotate3d(0,1,0,360deg);
-        -webkit-transform:rotate3d(0,1,0,360deg);
+        transform: rotate3d(0, 1, 0, 360deg);
+        -webkit-transform: rotate3d(0, 1, 0, 360deg);
     }
 }
 
@@ -608,20 +605,20 @@
     animation-fill-mode: both;
 }
 
-.no-video{
+.no-video {
     height: 5rem;
     line-height: 5rem;
     text-align: center;
 }
 
-.detail-wrapper .back-button{
-   position: fixed;
-   display: none;
-   bottom:1rem;
-   right :.6rem;
-   z-index: 90;
-   width:1rem;
-   height:1rem;
-   background:url(../../images/backhome_icon.png) no-repeat;
-   background-size: contain;
+.detail-wrapper .back-button {
+    position: fixed;
+    display: none;
+    bottom: 1rem;
+    right: .6rem;
+    z-index: 90;
+    width: 1rem;
+    height: 1rem;
+    background: url(../../images/backhome_icon.png) no-repeat;
+    background-size: contain;
 }
