--- a/app/pages/hot/hot.css
+++ b/app/pages/hot/hot.css
@@ -102,44 +102,62 @@
 
 .hot-wrapper li > div:nth-child(2) p {
     font-size: 11px;
-    height: 100%;
+    height: 1.1rem;
+    line-height: 1.1rem;
     color: #333;
 }
 
 .hot-wrapper p.adv-invest {
-    width: 30%;
-    background: url(../../images/adv_amt_icon2.png) no-repeat;
-    background-size: .34rem .34rem;
-    background-position: .23rem center;
-    padding-left: .6rem;
+    width: 45%;
+    padding-left:.3rem;
 }
+
+.hot-wrapper p.adv-invest:before{
+    content: '';
+    display: inline-block;
+    width: .34rem;
+    height: .34rem;
+    background: url(../../images/adv_amt_icon2.png) no-repeat;
+    background-size: contain;
+    vertical-align: -4px;
+    margin-right: 4px;    
+}
+
 
 .hot-wrapper p.adv-packetcount {
-    width: 35%;
-    background: url(../../images/adv_packet_icon2.png) no-repeat;
-    background-size: .34rem .34rem;
-    background-position: left center;
-    padding-left: .36rem;
+    width: 40%;
 }
 
-.hot-wrapper p.adv-score {
+.hot-wrapper p.adv-packetcount:before{
+    content: '';
+    display: inline-block;
+    width: .34rem;
+    height: .34rem;
+    background: url(../../images/adv_packet_icon2.png) no-repeat;
+    background-size: contain;
+    vertical-align: -4px;
+    margin-right: 4px; 
+}
+
+/*.hot-wrapper p.adv-score {
     width: 20%;
     background: url(../../images/adv_score_icon2.png) no-repeat;
     background-size: .34rem .34rem;
     background-position: left center;
     padding-left: .36rem;
-}
+}*/
 
 .hot-wrapper p.adv-time {
     width: 15%;
-    padding-left: 0!important;
+    text-align: right;
+    margin-right: .3rem;
 }
 
 .hot-wrapper p.adv-time span {
     background-color: #adaca8;
     color: #fff;
     padding: 0 5px;
-    border-radius: 10px;
+    border-radius: 8px;
 }
 
 .slideOutRight {
