--- a/app/common/common.css
+++ b/app/common/common.css
@@ -15,7 +15,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    height: .98rem;
+    height: 49px;
     background-color: #ddd;
     border-top: 1px solid #c1c1c1;
     z-index: 10;
@@ -26,9 +26,13 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    height: .98rem;
+    height: 49px;
     background-color: #e2e2e2;
     text-align: center;
+}
+
+.nav-wrapper li{
+    height: 49px;   
 }
 
 .nav-wrapper li a {
@@ -36,28 +40,29 @@
     font-size: 11px;
     color: #333;
     text-align: center;
-    padding-top: 0.6rem;
+    padding-top: 30px;
+    min-height: 11px;
 }
 
 .nav-wrapper li:nth-child(1) a {
     background-image: url(../images/first_gray.png);
     background-repeat: no-repeat;
     background-position: center 20%;
-    background-size: .5rem .48rem;
+    background-size: 25px 24px;
 }
 
 .nav-wrapper li:nth-child(2) a {
     background-image: url(../images/hot_gray.png);
     background-repeat: no-repeat;
     background-position: center 20%;
-    background-size: .5rem .48rem;
+    background-size: 25px 24px;
 }
 
 .nav-wrapper li:nth-child(3) a {
     background-image: url(../images/mine_gray.png);
     background-repeat: no-repeat;
     background-position: center 20%;
-    background-size: .5rem .48rem;
+    background-size: 25px 24px;
 }
 
 .nav-wrapper li:nth-child(1) a.active {
