--- a/app/reset/reset.css
+++ b/app/reset/reset.css
@@ -27,7 +27,7 @@ time, mark, audio, video, input {
 html {
     background-color: #eeeff3;
     -webkit-text-size-adjust: 100%;
-/*    overflow: hidden;*/
+    overflow: hidden;
 }
 
 html * {
