--- a/app/pages/login/login.css
+++ b/app/pages/login/login.css
@@ -37,6 +37,7 @@
     background-color: #eee;
     color: #333;
     font-size: 14px;
+    appearance: none;   
 }
 
 .login-content li:nth-child(1) label {
