--- a/app/pages/modifyPassword/forgetPassword.css
+++ b/app/pages/modifyPassword/forgetPassword.css
@@ -19,6 +19,10 @@
     border-radius: 8px;
 }
 
+.forgetPassword-content li input{
+    appearance: none;   
+}
+
 .forgetPassword-content li:nth-child(1){
     overflow: hidden;
     margin-bottom: .3rem;
