--- a/app/components/scroll/iscroll.css
+++ b/app/components/scroll/iscroll.css
@@ -36,7 +36,7 @@
     position: absolute;
     height: 30px;
     width: 30px;
-    border: 1px solid #0CF;
+    border: 1px solid #999;
     border-radius: 50%;
     animation: rond 1s infinite;
     -webkit-animation: rond 1s infinite;
@@ -49,7 +49,7 @@
     height: 5px;
     width: 5px;
     border-radius: 50%;
-    background-color: #0CF;
+    background-color: #999;
 }
 
 .scroll-loading .loading-circle {
@@ -61,7 +61,7 @@
     color: #fff;
     border-radius: 50%;
     text-align: center;
-    background: #0CF;
+    background: #999;
 }
 
 .scroll-loading .loading-circle p {
