--- a/app/pages/login/login.css
+++ b/app/pages/login/login.css
@@ -5,6 +5,7 @@
     background-color: #eee;
     background: url(../../images/login_bg.png) no-repeat;
     background-size: cover;
+    overflow: hidden;
 }
 
 .login-content {
