--- a/app/reset/reset.css
+++ b/app/reset/reset.css
@@ -44,6 +44,7 @@ body {
     font: 14px/1.5 'Heiti SC', 'Helvetica', 'HelveticaNeue', 'Droidsansfallback', "Droid Sans", 'Dengxian', 'Segoe', 'microsoft yahei';
     color: #323232;
     background-color: #fff;
+    overflow: hidden;
 }
 
 article,
