--- a/app/pages/about/about.css
+++ b/app/pages/about/about.css
@@ -6,13 +6,11 @@
 }
 
 .about-wrapper .product-logo {
-    margin-top: .98rem;
-    margin-bottom: .2rem;
+    height: 2.98rem;
     width: 100%;
-    height: 1rem;
     background: url(../../images/strawberry_logo.png) no-repeat;
-    background-size: contain;
-    background-position: center center;
+    background-size: 100px 100px;
+    background-position: center bottom;
 }
 
 .about-wrapper > h1 {
