--- a/app/common/common.css
+++ b/app/common/common.css
@@ -13,24 +13,20 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 49px;
-    background-color: #ddd;
+    height: 50px;
+    background-color: #e2e2e2;
+    text-align: center;
     border-top: 1px solid #c1c1c1;
     z-index: 10;
 }
 
-.nav-wrapper .nav {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 49px;
-    background-color: #e2e2e2;
-    text-align: center;
+.nav-wrapper ul{
+    width:100%;
+    height:100%;
 }
 
 .nav-wrapper li {
-    height: 49px;
+    height: 50px;
 }
 
 .nav-wrapper li a {
