--- a/app/common/common.css
+++ b/app/common/common.css
@@ -38,35 +38,35 @@
     background-image: url(../images/first_gray.png);
     background-repeat: no-repeat;
     background-position: center 20%;
-    background-size: 25px 24px;
+    background-size: 26px 26px;
 }
 
 .nav-wrapper li:nth-child(2) a {
     background-image: url(../images/hot_gray.png);
     background-repeat: no-repeat;
     background-position: center 20%;
-    background-size: 25px 24px;
+    background-size: 26px 26px;
 }
 
 .nav-wrapper li:nth-child(3) a {
     background-image: url(../images/mine_gray.png);
     background-repeat: no-repeat;
     background-position: center 20%;
-    background-size: 25px 24px;
+    background-size: 26px 26px;
 }
 
 .nav-wrapper li:nth-child(1) a.active {
-    color: #811b10;
+    color: #ce1035;
     background-image: url(../images/first_light.png);
 }
 
 .nav-wrapper li:nth-child(2) a.active {
-    color: #811b10;
+    color: #ce1035;
     background-image: url(../images/hot_light.png);
 }
 
 .nav-wrapper li:nth-child(3) a.active {
-    color: #811b10;
+    color: #ce1035;
     background-image: url(../images/mine_light.png);
 }
 
